// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse should render 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    data-testid="Collapse"
    style="height: 0px; opacity: 0; overflow: hidden;"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Collapse should render visible 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    data-testid="Collapse"
    style="max-height: auto; height: auto; opacity: 1; overflow: auto;"
  >
    Test
  </div>
</DocumentFragment>
`;
